Add review moderation and menu sorting features